--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -59,10 +59,14 @@
               </nav>
             {% when 'account' %}
               <div class="hidden md:flex items-center justify-end md:flex-1 space-x-5">
-                <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
-                  {% render 'shopping-bag'
-                    , class: 'w-6 h-6' %}
-                </a>
+                <div class="relative">
+                  <a href="{{ routes.cart_url }}" class=" relative whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
+                    {% render 'shopping-bag'
+                      , class: 'w-6 h-6' %}
+                  </a>
+                  <span id="header_cart_item_count" class="absolute -top-3 -right-2 w-5 h-5 font-bold rounded-full bg-red-700 flex justify-center items-center p-0 text-sm text-white">
+                    {{ cart.item_count }}</span>
+                </div>
                 {% if shop.customer_accounts_enabled %}
                   <a href="{{ routes.account_login_url }}" class="badge-success badge-sm text-sm rounded-md">Login</a>
                   <a href="{{ routes.account_register_url }}" class="badge-error badge-sm text-sm rounded-md">Register</a>
