--- a/snippets/product-card-1.liquid
+++ b/snippets/product-card-1.liquid
@@ -29,7 +29,7 @@
       {% endif %}
       <span class="text-sm line-through">{{ product.compare_at_price | money }}</span>
     </h3>
-    <div class=" flex justify-center mt-2">
+    <div class=" flex flex-col justify-center mt-2">
       {% if product.has_only_default_variant %}
         {% if section.settings.add_to_cart_type == 'form' %}
           <form
@@ -58,6 +58,7 @@
             data-product-card-id="{{product.id}}"
             class=" bg-violet-700 hover:bg-violet-900  text-white btn-full">Add to cart</button>
         {% endif %}
+        <a href="{{ product.url }}" class="px-4 mt-4  block w-full text-center py-2 bg-gray-700 hover:bg-black capitalize rounded-md text-white">view details</a>
 
       {% else %}
         <div class="w-full">
